--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.profiles.active=h2
 server.port=8085
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
-
-save.file.path=pliki
+management.endpoint.shutdown.enabled=true
+management.endpoints.web.exposure.include=shutdown,env,mappings
